syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.example.grpc";
option java_outer_classname = "ContactServiceProto";

package com.example.grpc;

service ContactService {
  rpc AddContact (ContactInfo) returns (ContactId);
  rpc UpdateContact (ContactInfoWithId) returns (Empty);
  rpc DeleteContact (ContactId) returns (Empty);
  rpc ClearContacts (Empty) returns (Empty);
  rpc GetContact (ContactId) returns (ContactInfo);
  rpc GetContactsList (Empty) returns (ContactsList);
  rpc GetGroceryListForContact (ContactId) returns (stream GroceryItem);
  rpc Chat (stream ChatMessageWithId) returns (stream ChatMessage);
}

message Empty {}

message ContactInfo {
  string firstName = 1;
  string lastName = 2;
  string phoneNumber = 3;
  string email = 4;
}

message ContactInfoWithId {
  string id = 1;
  string firstName = 2;
  string lastName = 3;
  string phoneNumber = 4;
  string email = 5;
}

message ContactId {
  string id = 1;
}

message ContactsList {
  repeated ContactInfoWithId contacts = 1;
}

message GroceryItem {
  string name = 1;
  int32 amount = 2;
}

message ChatMessage {
  string content = 1;
}

message ChatMessageWithId {
  string id = 1;
  string content = 2;
}
